🌐 Added missing i18n for expertise link in comments
Adds missing i18n for the expertise link in the comments-ui app including German locale.

--- a/ghost/i18n/locales/af/comments.json
+++ b/ghost/i18n/locales/af/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Voeg kommentaar by",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Voeg konteks by jou kommentaar, deel jou naam en kundigheid om 'n gesonde bespreking te bevorder.",
     "Add reply": "Voeg antwoord by",
+    "Add your expertise": "",
     "Already a member?": "Reeds 'n lid?",
     "Anonymous": "Anoniem",
     "Are you sure?": "",
