--- a/ghost/i18n/locales/ar/comments.json
+++ b/ghost/i18n/locales/ar/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "اضف تعليق",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "قم بإضافة سياق لتعليقك، شارك اسمك و مجال خبرتك لكي نرعى محادثة مثمرة",
     "Add reply": "ردّ",
+    "Add your expertise": "",
     "Already a member?": "هل انت مسجل بالفعل؟",
     "Anonymous": "مجهول",
     "Are you sure?": "",
