--- a/ghost/i18n/locales/bg/comments.json
+++ b/ghost/i18n/locales/bg/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Нов коментар",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Добавете контекст към коментара си, споделете името си и опита си, за да насърчите полезна дискусия.",
     "Add reply": "Отговор",
+    "Add your expertise": "",
     "Already a member?": "Вече сте абонат?",
     "Anonymous": "Анонимен",
     "Are you sure?": "Убедени ли сте?",
