--- a/ghost/i18n/locales/bs/comments.json
+++ b/ghost/i18n/locales/bs/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Dodaj komentar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Dodaj kontekst svom komentaru, podijeli svoje ime i stručnost u svrhu kvalitetnije diskusije.",
     "Add reply": "Objavi komentar",
+    "Add your expertise": "",
     "Already a member?": "Već si član?",
     "Anonymous": "Anoniman",
     "Are you sure?": "",
