--- a/ghost/i18n/locales/ca/comments.json
+++ b/ghost/i18n/locales/ca/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Afegeix un comentari",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Afegeix context al teu comentari, comparteix el teu nom i experiència per fomentar una discussió sana.",
     "Add reply": "Afegeix una resposta",
+    "Add your expertise": "",
     "Already a member?": "Ja n'ets membre?",
     "Anonymous": "Anònim",
     "Are you sure?": "N'estàs segur?",
