--- a/ghost/i18n/locales/cs/comments.json
+++ b/ghost/i18n/locales/cs/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Přidat komentář",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Pro podporu zdravé diskuse přidejte ke svému komentáři kontext, své jméno a odbornost.",
     "Add reply": "Přidat odpověď",
+    "Add your expertise": "",
     "Already a member?": "Už jste členem?",
     "Anonymous": "Anonymní",
     "Are you sure?": "",
