--- a/ghost/i18n/locales/da/comments.json
+++ b/ghost/i18n/locales/da/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Tilføj kommentar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Tilføj kontekst til din kommentar, del dit navn og ekspertise for at fremme en sund diskussion.",
     "Add reply": "Tilføj svar",
+    "Add your expertise": "",
     "Already a member?": "Allerede medlem?",
     "Anonymous": "Anonym",
     "Are you sure?": "Er du sikker?",
