--- a/ghost/i18n/locales/de/comments.json
+++ b/ghost/i18n/locales/de/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Kommentar hinzufügen",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Füge deinem Kommentar Kontext hinzu, teile deinen Namen und deine Expertise, um eine gesunde Diskussion zu fördern.",
     "Add reply": "Antwort hinzufügen",
+    "Add your expertise": "Ergänze deine Expertise",
     "Already a member?": "Bist du bereits Mitglied?",
     "Anonymous": "Anonym",
     "Are you sure?": "Bist du sicher?",
