--- a/ghost/i18n/locales/el/comments.json
+++ b/ghost/i18n/locales/el/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Προσθήκη σχολίου",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Προσθέστε περιεχόμενο στο σχόλιό σας, μοιραστείτε το όνομα και την εξειδίκευσή σας για να προωθήσετε μια υγιή συζήτηση.",
     "Add reply": "Προσθήκη απάντησης",
+    "Add your expertise": "",
     "Already a member?": "Ήδη μέλος;",
     "Anonymous": "Ανώνυμος",
     "Are you sure?": "",
