--- a/ghost/i18n/locales/es/comments.json
+++ b/ghost/i18n/locales/es/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Agregar comentario",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Agrega contexto a tu comentario, comparte tu nombre y experiencia para fomentar una discusión sana.",
     "Add reply": "Agregar respuesta",
+    "Add your expertise": "",
     "Already a member?": "¿Ya eres miembro?",
     "Anonymous": "Anónimo",
     "Are you sure?": "",
