--- a/ghost/i18n/locales/et/comments.json
+++ b/ghost/i18n/locales/et/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Lisa kommentaar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Lisa oma kommentaarile konteksti, jaga oma nime ja kogemusi, et soodustada tervislikku arutelu.",
     "Add reply": "Lisa vastus",
+    "Add your expertise": "",
     "Already a member?": "Juba liige?",
     "Anonymous": "Anonüümne",
     "Are you sure?": "",
