--- a/ghost/i18n/locales/fa/comments.json
+++ b/ghost/i18n/locales/fa/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "دیدگاهی بفرستید",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "به دیدگاه خود موضوعیت ببخشید و با به اشتراک\u200cگذاری نام و تخصص خود یک گفتمان سالم ایجاد کنید.",
     "Add reply": "پاسخی بدهید",
+    "Add your expertise": "",
     "Already a member?": "عضو هستید؟",
     "Anonymous": "ناشناس",
     "Are you sure?": "",
