--- a/ghost/i18n/locales/fi/comments.json
+++ b/ghost/i18n/locales/fi/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Lisää kommentti",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Lisää sisältöä kommenttiisi, jaa nimesi ja osaamisesi saadaksesi aikaan tervettä keskustelua",
     "Add reply": "Lisää vastaus",
+    "Add your expertise": "",
     "Already a member?": "Oletko jo jäsen?",
     "Anonymous": "Anonyymi",
     "Are you sure?": "",
