--- a/ghost/i18n/locales/fr/comments.json
+++ b/ghost/i18n/locales/fr/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Ajouter un commentaire",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Ajoutez un contexte à votre commentaire. Partagez votre nom et vos compétences pour favoriser une discussion saine.",
     "Add reply": "Ajouter une réponse",
+    "Add your expertise": "",
     "Already a member?": "Déjà abonné ?",
     "Anonymous": "Anonyme",
     "Are you sure?": "",
