--- a/ghost/i18n/locales/gd/comments.json
+++ b/ghost/i18n/locales/gd/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Fàg beachd air",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Cuir co-theacsa ris a' bheachd agad, cuir d' ainm is sàr-eòlas ris gus deasbad fallain a brosnachadh.",
     "Add reply": "Cuir freagairt ris",
+    "Add your expertise": "",
     "Already a member?": "’Eil thu nad bhall mar-thà?",
     "Anonymous": "Gun ainm",
     "Are you sure?": "A bheil thu cinnteach?",
