--- a/ghost/i18n/locales/he/comments.json
+++ b/ghost/i18n/locales/he/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "הוסיפו תגובה",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "הוסיפו תוכן לתגובה שלכם, שתפו את שמכם ואת התמחותכם כדי לקדם דיון בריא.",
     "Add reply": "הוסיפו תגובה",
+    "Add your expertise": "",
     "Already a member?": "כבר רשומים?",
     "Anonymous": "אנונימי",
     "Are you sure?": "",
