--- a/ghost/i18n/locales/hi/comments.json
+++ b/ghost/i18n/locales/hi/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "टिप्पणी जोड़ें",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "अपनी टिप्पणी में संदर्भ जोड़ें, स्वस्थ चर्चा के लिए अपना नाम और विशेषज्ञता साझा करें।",
     "Add reply": "जवाब जोड़ें",
+    "Add your expertise": "",
     "Already a member?": "पहले से सदस्य हैं?",
     "Anonymous": "अनाम",
     "Are you sure?": "",
