--- a/ghost/i18n/locales/hr/comments.json
+++ b/ghost/i18n/locales/hr/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Dodaj komentar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Dajte kontekts vašem komentaru, podijelite vaše ime i znanje za unaprijeđenje svake rasprave.",
     "Add reply": "Dodaj odgovor",
+    "Add your expertise": "",
     "Already a member?": "Već si član?",
     "Anonymous": "Anonimus",
     "Are you sure?": "",
