--- a/ghost/i18n/locales/hu/comments.json
+++ b/ghost/i18n/locales/hu/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Hozzászólás",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Segítsd a beszélgetést azzal, hogy megadod a nevedet és azt, hogy mihez értesz.",
     "Add reply": "Válasz",
+    "Add your expertise": "",
     "Already a member?": "Van már fiókod?",
     "Anonymous": "Anonim",
     "Are you sure?": "Biztos vagy benne?",
