--- a/ghost/i18n/locales/id/comments.json
+++ b/ghost/i18n/locales/id/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Tambahkan komentar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Tambahkan konteks pada komentar Anda, bagikan nama dan keahlian Anda untuk mendorong diskusi yang sehat.",
     "Add reply": "Tambahkan balasan",
+    "Add your expertise": "",
     "Already a member?": "Sudah menjadi anggota?",
     "Anonymous": "Anonim",
     "Are you sure?": "",
