--- a/ghost/i18n/locales/it/comments.json
+++ b/ghost/i18n/locales/it/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Aggiungi commento",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Aggiungi dettagli al tuo commento, condividi il tuo nome e le tue competenze per incoraggiare una conversazione sana.",
     "Add reply": "Aggiungi risposta",
+    "Add your expertise": "",
     "Already a member?": "Sei già iscritto?",
     "Anonymous": "Anonimo",
     "Are you sure?": "",
