--- a/ghost/i18n/locales/ko/comments.json
+++ b/ghost/i18n/locales/ko/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "댓글 추가",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "건설적인 토론을 위해 댓글에 맥락을 추가하고, 이름과 전문 분야를 공유해 주세요.",
     "Add reply": "답변 추가",
+    "Add your expertise": "",
     "Already a member?": "이미 회원이신가요?",
     "Anonymous": "익명",
     "Are you sure?": "",
