--- a/ghost/i18n/locales/kz/comments.json
+++ b/ghost/i18n/locales/kz/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Пікір қосу",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Талқы қызық болуы үшін өзіңіз туралы мәліметтерді қосыңыз.",
     "Add reply": "Жауап қосу",
+    "Add your expertise": "",
     "Already a member?": "Әлдеқашан қосылдыңыз ба?",
     "Anonymous": "Аноним",
     "Are you sure?": "",
