--- a/ghost/i18n/locales/lt/comments.json
+++ b/ghost/i18n/locales/lt/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Rašyti komentarą",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Papildykite savo komentarą, prisistatykite ir pasidalinkite savo turimomis žiniomis, kad paskatintumėte prasmingą diskusiją.",
     "Add reply": "Atsakyti",
+    "Add your expertise": "",
     "Already a member?": "Jau turite paskyrą?",
     "Anonymous": "Anoniminis",
     "Are you sure?": "",
