--- a/ghost/i18n/locales/lv/comments.json
+++ b/ghost/i18n/locales/lv/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Pievienot komentāru",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Pievienojiet savam komentāram kontekstu, kopīgojiet savu vārdu un zināšanas, lai veicinātu veselīgu diskusiju.",
     "Add reply": "Pievienot atbildi",
+    "Add your expertise": "",
     "Already a member?": "Vai jau esat dalībnieks?",
     "Anonymous": "Anonīms",
     "Are you sure?": "Vai esat pārliecināts?",
