--- a/ghost/i18n/locales/mn/comments.json
+++ b/ghost/i18n/locales/mn/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Сэтгэгдэл нэмэх",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Сэтгэгдэлдээ илүү мэдээлэл оруулан, нэр болон мэргэжлээ хуваалцаж, үр бүтээлтэй хэлэлцүүлэг өрнүүлнэ үү.",
     "Add reply": "Хариу нэмэх",
+    "Add your expertise": "",
     "Already a member?": "Бүртгэлтэй юу?",
     "Anonymous": "Нууц",
     "Are you sure?": "Та итгэлтэй байна уу?",
