--- a/ghost/i18n/locales/nb/comments.json
+++ b/ghost/i18n/locales/nb/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Legg til kommentar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Legg til kontekst i kommentaren din, del navnet ditt og ekspertisen din for å fremme en god diskusjon.",
     "Add reply": "Legg til svar",
+    "Add your expertise": "",
     "Already a member?": "Allerede medlem?",
     "Anonymous": "Anonym",
     "Are you sure?": "Er du sikker?",
