--- a/ghost/i18n/locales/pl/comments.json
+++ b/ghost/i18n/locales/pl/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Dodaj komentarz",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Dodaj więcej informacji do Twojego komentarza, następnie udostępnij proszę Twoje imię i doświadczenie w celu wzbogacenia jakości dyskusji.",
     "Add reply": "Dodaj odpowiedź",
+    "Add your expertise": "",
     "Already a member?": "Posiadasz już konto?",
     "Anonymous": "Anonimowy",
     "Are you sure?": "Czy jesteś pewien?",
