--- a/ghost/i18n/locales/pt-BR/comments.json
+++ b/ghost/i18n/locales/pt-BR/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Adicionar comentário",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Adicione contexto ao seu comentário, compartilhe seu nome e sua especialidade para promover uma discussão saudável.",
     "Add reply": "Adicionar resposta",
+    "Add your expertise": "",
     "Already a member?": "Já é um membro?",
     "Anonymous": "Anônimo",
     "Are you sure?": "Você tem certeza?",
