--- a/ghost/i18n/locales/pt/comments.json
+++ b/ghost/i18n/locales/pt/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Adicionar comentário",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Adicione o seu comentário, partilhe o seu nome e expriência de modo a promover uma discussão saudável.",
     "Add reply": "Adicionar resposta",
+    "Add your expertise": "",
     "Already a member?": "Já é membro?",
     "Anonymous": "Anónimo",
     "Are you sure?": "",
