--- a/ghost/i18n/locales/ro/comments.json
+++ b/ghost/i18n/locales/ro/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Adaugă comentariu",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Adăugați context comentariului dumneavoastră, împărtășiți-vă numele și expertiza pentru a favoriza o discuție sănătoasă.",
     "Add reply": "Adaugă răspuns",
+    "Add your expertise": "",
     "Already a member?": "Deja membru?",
     "Anonymous": "Anonim",
     "Are you sure?": "",
