--- a/ghost/i18n/locales/ru/comments.json
+++ b/ghost/i18n/locales/ru/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Добавить комментарий",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Дополните свой комментарий контекстом, добавив подробности о себе и своём опыте, чтобы обсуждение стало более интересным.",
     "Add reply": "Добавить ответ",
+    "Add your expertise": "",
     "Already a member?": "Уже присоединились?",
     "Anonymous": "Анонимный",
     "Are you sure?": "Вы уверены?",
