--- a/ghost/i18n/locales/si/comments.json
+++ b/ghost/i18n/locales/si/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "අදහස් එකතු කරන්\u200bන",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "ඉතා හො\u200bඳ සාකච්ඡාවක් රැගෙ\u200bන යාම සඳහා ඔබේ අදහසට අන්තර්ගත\u200bය එක් කර ඔබේ නම සහ විශේෂඥතාව බෙදා ගන්න",
     "Add reply": "ප්\u200dරතිචාර එකතු කරන්\u200bන",
+    "Add your expertise": "",
     "Already a member?": "දැනටමත් සාමාජිකයෙක්ද ?",
     "Anonymous": "නිර්නාමික",
     "Are you sure?": "",
