--- a/ghost/i18n/locales/sk/comments.json
+++ b/ghost/i18n/locales/sk/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Pridať komentár",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Pridajte kontext do vášho komentára, zdielajte svoje  meno, a odbornosť pre podporu zdravej diskusie.",
     "Add reply": "Pridať odpoveď",
+    "Add your expertise": "",
     "Already a member?": "Už ste členom?",
     "Anonymous": "Anonym",
     "Are you sure?": "Ste si istý?",
