--- a/ghost/i18n/locales/sl/comments.json
+++ b/ghost/i18n/locales/sl/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Dodajte komentar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Dodajte kontekst svojemu komentarju, delite svoje ime in strokovno znanje za spodbujanje zdrave razprave.",
     "Add reply": "Dodajte odgovor",
+    "Add your expertise": "",
     "Already a member?": "Ste že član?",
     "Anonymous": "Anonimno",
     "Are you sure?": "Ste prepričani?",
