--- a/ghost/i18n/locales/sr-Cyrl/comments.json
+++ b/ghost/i18n/locales/sr-Cyrl/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Додајте коментар",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Додајте контекст свом коментару, поделите своје име и експертизу како бисте подстакли здраву дискусију.",
     "Add reply": "Додајте одговор",
+    "Add your expertise": "",
     "Already a member?": "Већ сте члан?",
     "Anonymous": "Анонимно",
     "Are you sure?": "",
