--- a/ghost/i18n/locales/sv/comments.json
+++ b/ghost/i18n/locales/sv/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Lägg till kommentar",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Lägg till kontext till din kommentar, som ditt namn, din expertis för att skapa ett bra forum.",
     "Add reply": "Lägg till svar",
+    "Add your expertise": "",
     "Already a member?": "Redan medlem?",
     "Anonymous": "Anonym",
     "Are you sure?": "",
