--- a/ghost/i18n/locales/sw/comments.json
+++ b/ghost/i18n/locales/sw/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Ongeza maoni",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Ongeza muktadha kwa maoni yako, shiriki jina lako na utaalamu ili kuendeleza mjadala wenye afya.",
     "Add reply": "Ongeza jibu",
+    "Add your expertise": "",
     "Already a member?": "Tayari ni mwanachama?",
     "Anonymous": "Asiyetambulika",
     "Are you sure?": "",
