--- a/ghost/i18n/locales/ta/comments.json
+++ b/ghost/i18n/locales/ta/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "கருத்தைச் சேர்க்கவும்",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "உங்கள் கருத்துக்கு சூழலைச் சேர்க்கவும், ஆரோக்கியமான விவாதத்தை வளர்க்க உங்கள் பெயரையும் நிபுணத்துவத்தையும் பகிர்ந்து கொள்ளுங்கள்.",
     "Add reply": "பதில் சேர்க்கவும்",
+    "Add your expertise": "",
     "Already a member?": "ஏற்கனவே உறுப்பினரா?",
     "Anonymous": "அடையாளம் தெரியாத",
     "Are you sure?": "",
