--- a/ghost/i18n/locales/th/comments.json
+++ b/ghost/i18n/locales/th/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "แสดงความคิดเห็น",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "เพิ่มข้อมูลเสริมในความคิดเห็นของคุณ แชร์ชื่อและความเชี่ยวชาญเพื่อสนับสนุนการพูดคุยที่ดี",
     "Add reply": "ตอบกลับ",
+    "Add your expertise": "",
     "Already a member?": "เป็นสมาชิกอยู่แล้ว?",
     "Anonymous": "ไม่ระบุชื่อ",
     "Are you sure?": "",
