--- a/ghost/i18n/locales/tr/comments.json
+++ b/ghost/i18n/locales/tr/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Yorum ekle",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Yorumunuza bağlam ekleyin, adınızı ve uzmanlık alanınızı paylaşarak sağlıklı bir tartışmayı teşvik edin.",
     "Add reply": "Yanıt ekle",
+    "Add your expertise": "",
     "Already a member?": "Zaten üye misiniz?",
     "Anonymous": "Anonim",
     "Are you sure?": "Emin misin?",
