--- a/ghost/i18n/locales/uk/comments.json
+++ b/ghost/i18n/locales/uk/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Додати коментар",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Додайте контекст до свого коментаря, поділіться своїм іменем і досвідом, щоб сприяти здоровій дискусії.",
     "Add reply": "Додати відповідь",
+    "Add your expertise": "",
     "Already a member?": "Ви є учасником?",
     "Anonymous": "Анонім",
     "Are you sure?": "",
