--- a/ghost/i18n/locales/ur/comments.json
+++ b/ghost/i18n/locales/ur/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "تبادلہ شامل کریں",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "اپنے تبادلے میں سیاق و سباق شامل کریں، اچھی گفتگو کو بڑھانے کے لئے اپنا نام اور ماہریت شیئر کریں۔",
     "Add reply": "جواب شامل کریں",
+    "Add your expertise": "",
     "Already a member?": "پہلے ہی رکن ہیں؟",
     "Anonymous": "ناشناس",
     "Are you sure?": "",
