--- a/ghost/i18n/locales/vi/comments.json
+++ b/ghost/i18n/locales/vi/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Thêm bình luận",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Thêm ngữ cảnh, tên và chuyên môn của bạn để thúc đẩy cuộc thảo luận lành mạnh.",
     "Add reply": "Trả lời",
+    "Add your expertise": "",
     "Already a member?": "Đã là thành viên?",
     "Anonymous": "Ẩn danh",
     "Are you sure?": "Bạn có chắc không?",
