--- a/ghost/i18n/locales/zh-Hant/comments.json
+++ b/ghost/i18n/locales/zh-Hant/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "留言",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "為您的留言補充情境、說明您的稱呼與專業背景均有助於健康的討論氛圍。",
     "Add reply": "回覆",
+    "Add your expertise": "",
     "Already a member?": "已經是會員？",
     "Anonymous": "匿名",
     "Are you sure?": "確認？",
