--- a/ghost/i18n/locales/zh/comments.json
+++ b/ghost/i18n/locales/zh/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "添加评论",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "为您的评论补充上下文信息、说明您的称呼与专业背景均有助于营造健康的讨论氛围。",
     "Add reply": "添加回复",
+    "Add your expertise": "",
     "Already a member?": "已经是会员？",
     "Anonymous": "匿名",
     "Are you sure?": "",
