--- a/ghost/i18n/locales/bn/comments.json
+++ b/ghost/i18n/locales/bn/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "মন্তব্য যোগ করুন",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "আপনার মন্তব্যে প্রসঙ্গ যোগ করুন, একটি সুস্থ আলোচনা করতে আপনার নাম ও অভিজ্ঞতা শেয়ার করুন।",
     "Add reply": "উত্তর যোগ করুন",
+    "Add your expertise": "",
     "Already a member?": "ইত:পূর্বে সদস্য?",
     "Anonymous": "অজ্ঞাতনামা",
     "Are you sure?": "",
