--- a/ghost/i18n/locales/context.json
+++ b/ghost/i18n/locales/context.json
@@ -10,6 +10,7 @@
     "Add comment": "Button text to post a comment",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Invitation to include additional info when commenting",
     "Add reply": "Button text to post your reply",
+    "Add your expertise": "A link in the comments to add ones expertise if not yet provided",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Confirmation message explaining how free trials work during signup",
     "All the best!": "A light-hearted ending to an email",
     "Already a member?": "A link displayed on signup screen, inviting people to log in if they have already signed up previously",
