--- a/ghost/i18n/locales/ja/comments.json
+++ b/ghost/i18n/locales/ja/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "コメントする",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "コメントはよく説明し、名前と専門分野を共有することで健全な議論をすすめましょう。",
     "Add reply": "返信する",
+    "Add your expertise": "",
     "Already a member?": "メンバーですか？",
     "Anonymous": "匿名",
     "Are you sure?": "",
