--- a/ghost/i18n/locales/mk/comments.json
+++ b/ghost/i18n/locales/mk/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Додајте коментар",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Додајте контекст за вашиот коментар, споделете го вашето име и експертиза за да одржите пристојна дискусија.",
     "Add reply": "Одговорете",
+    "Add your expertise": "",
     "Already a member?": "Веќе сте член?",
     "Anonymous": "Анонимен",
     "Are you sure?": "",
