--- a/ghost/i18n/locales/ne/comments.json
+++ b/ghost/i18n/locales/ne/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "प्रतिक्रिया थप्नुहोस्",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "आफ्नो प्रतिक्रियालाई सन्दर्भ दिनुहोस्, स्वस्थ छलफलको लागि आफ्नो नाम र विशेषज्ञता साझा गर्नुहोस्।",
     "Add reply": "प्रत्युत्तर थप्नुहोस्",
+    "Add your expertise": "",
     "Already a member?": "पहिले नै सदस्य हुनुहुन्छ?",
     "Anonymous": "अज्ञात",
     "Are you sure?": "के तपाईं निश्चित हुनुहुन्छ?",
