--- a/ghost/i18n/locales/nl/comments.json
+++ b/ghost/i18n/locales/nl/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "Versturen",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Voeg context toe aan je reactie, deel je naam en expertise om een gezonde discussie te bevorderen.",
     "Add reply": "Beantwoorden",
+    "Add your expertise": "",
     "Already a member?": "Al lid?",
     "Anonymous": "Anoniem",
     "Are you sure?": "Weet je het zeker?",
