--- a/ghost/i18n/locales/nn/comments.json
+++ b/ghost/i18n/locales/nn/comments.json
@@ -8,6 +8,7 @@
     "Add comment": "",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "",
     "Add reply": "",
+    "Add your expertise": "",
     "Already a member?": "",
     "Anonymous": "",
     "Are you sure?": "",
